# encord-active

./: .deepsource.toml  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bck  README.md  alembic.ini  package-lock.json  pre-commit-npm.py  pyproject.toml  run.sh  test.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml
.github/workflows/: aikido.yml  build.yml  docker.yml  docs-deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  mimic_publish.yml  pre-commit.yml  publish.yml  publish_release.yml
docs/: .editorconfig  .firebaserc  README.md  active-cli.md  active-contributing.md  active-learning.md  active-os-faq.md  active-oss-basics.md  active-oss-getting-started.md  active-oss-how-to.md  active-oss-import.md  active-oss-tutorials.md  active-overview.md  active-python-sdk.md  active-quality-metrics.md  docusaurus.config.js  firebase.json  package-lock.json  package.json  sidebars.js
docs/active-basics/: active-oss-filtering.md  active-relabeling.md  active-tagging.md  active-versioning.md
docs/builders/: build_metrics_pages.py
examples/: Encord_Active_Building_your_own_metric_tutorial.ipynb  README.md  adding-own-custom-embeddings.ipynb  building-a-custom-metric-function.ipynb  download-sandbox-dataset.ipynb  download_sandbox_self_hosting.ipynb  getting-started-with-coco-project.ipynb  getting-started-with-encord-projects.ipynb  import_project_self_hosting.ipynb  initialization-project-with-labels-using-python.ipynb  initialization-project-without-labels-using-python.ipynb
frontend/: .env  .firebaserc  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
frontend_components/: README.md  pyproject.toml
frontend_components/encord_active_components/frontend/: .env  .env.packaged  .env.production  .env.sandbox  .eslintrc.json  .gitignore  package-lock.json  package.json  vite.config.ts
frontend_components/encord_active_components/frontend/src/: app.tsx  authContext.ts  constants.ts  index.css  main.tsx  vite-env.d.ts
frontend_components/encord_active_components/frontend/src/components/: IntegratedAPI.ts  ProjectPage.tsx  ProjectSelector.tsx  ProjectsPage.tsx  Spin.tsx  Types.ts
frontend_components/encord_active_components/frontend/src/components/charts/: ChartDistributionBar.tsx  ChartMetricCompareScatter.tsx  ChartMetricDissimilarity.tsx  ChartOutlierSummaryBar.tsx  ChartPredictionMetricPerformanceChart.tsx  ChartPredictionMetricVBar.tsx  ChartPredictionRecallCurve.tsx
frontend_components/encord_active_components/frontend/src/components/explorer/: Assistant.tsx  Explorer.tsx  ExplorerCharts.tsx  ExplorerDistribution.tsx  ExplorerEmbeddings.tsx  ExplorerGalleryItem.tsx  ExplorerPremiumSearch.tsx  ExplorerSearchResults.tsx  ExplorerTypes.ts  ImageWithPolygons.tsx  Pagination.tsx  Spinner.tsx  Tagging.tsx  api.ts  id.ts  useDisplaySettings.ts
frontend_components/encord_active_components/frontend/src/components/preview/: AnnotatedImage.tsx  GalleryCard.tsx  ItemPreviewModal.tsx  SimilarityModal.tsx
frontend_components/encord_active_components/frontend/src/components/tabs/: ProjectComparisonTab.tsx  SummaryTab.tsx  SummaryView.tsx
frontend_components/encord_active_components/frontend/src/components/tabs/modals/: CreateSubsetModal.tsx  CreateTagModal.tsx  UploadToEncordModal.tsx
frontend_components/encord_active_components/frontend/src/components/tabs/predictions/: PredictionSummaryTab.tsx  PredictionsMetricPerformanceTab.tsx  PredictionsTab.tsx
frontend_components/encord_active_components/frontend/src/components/util/: Formatter.ts  MetricFilter.tsx
frontend_components/encord_active_components/frontend/src/hooks/: Context.ts  useImageSrc.ts  useProjectHash.ts  useRateLimit.ts
frontend_components/encord_active_components/frontend/src/hooks/mutation/: useProjectMutationCreateSubset.ts  useProjectMutationTagItems.ts  useProjectMutationUploadToEncord.ts
frontend_components/encord_active_components/frontend/src/hooks/queries/: useListProjects.ts  usePredictionAnalysisReducedEmbeddings.ts  usePredictionAnalysisSearch.ts  usePredictionItem.ts  useProjectAnalysisDistribution.ts  useProjectAnalysisMetricScatter.ts  useProjectAnalysisReducedEmbeddings.ts  useProjectAnalysisSearch.ts  useProjectAnalysisSimilaritySearch.ts  useProjectAnalysisSummary.ts  useProjectCompareDissimilarity.ts  useProjectItem.ts  useProjectListCollaborators.ts  useProjectListPredictions.ts  useProjectListReductions.ts  useProjectMetadata.ts  useProjectPredictionMetricPerformance.ts  useProjectPredictionSummary.ts  useProjectSummary.ts  useProjectTaggedItems.ts
frontend_components/encord_active_components/frontend/src/openapi/: .openapi-generator-ignore  api.ts  base.ts  common.ts  configuration.ts
frontend_components/src/encord_active_components/: __init__.py  renderer.py
frontend_components/src/encord_active_components/components/: active.py  explorer.py  pages_menu.py  projects_page.py
frontend_components/src/encord_active_components/frontend/: ffo  package-lock.json  package.json  tailwind.config.cjs
frontend_components/src/encord_active_components/frontend/src/: index.css  main.tsx
frontend_components/src/encord_active_components/frontend/src/components/: index.ts
frontend_components/src/encord_active_components/frontend/src/components/explorer/: Assistant.tsx  Charts.tsx  Explorer.tsx  Pagination.tsx  Tagging.tsx  api.ts  id.ts
frontend_components/src/encord_active_components/frontend/src/components/james/: ActivePageNext.tsx
frontend_components/src/encord_active_components/frontend/src/components/james/oss/tabs/: ActiveSummaryTab.tsx
frontend_components/src/encord_active_components/frontend/src/components/pages-menu/: PagesMenu.tsx  index.ts
frontend_components/src/encord_active_components/frontend/src/components/projects-page/: ProjectsPage.tsx
frontend_components/src/encord_active_components/frontend/src/streamlit/: ErrorBoundry.tsx  UseNullableRenderData.ts
(+939 files in other folders)
